# jma-gis

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml  setup.cfg
docker/miniconda/: Dockerfile
docker/tippecanoe/: Dockerfile
srcdata/shapes/: 一次細分区域等.dbf  一次細分区域等.shp  一次細分区域等.shx  全国・地方予報区等.dbf  全国・地方予報区等.shp  全国・地方予報区等.shx  地方海上予報区.dbf  地方海上予報区.shp  地方海上予報区.shx  地震情報／細分区域.dbf  地震情報／細分区域.shp  地震情報／細分区域.shx  地震情報／都道府県等.dbf  地震情報／都道府県等.shp  地震情報／都道府県等.shx  市町村等をまとめた地域等.dbf  市町村等をまとめた地域等.shp  市町村等をまとめた地域等.shx  市町村等（土砂災害警戒情報）.dbf  市町村等（土砂災害警戒情報）.shp  市町村等（土砂災害警戒情報）.shx  市町村等（地震津波関係）.dbf  市町村等（地震津波関係）.shp  市町村等（地震津波関係）.shx  市町村等（大雨危険度）.dbf  市町村等（大雨危険度）.shp  市町村等（大雨危険度）.shx  市町村等（指定河川洪水予報）.dbf  市町村等（指定河川洪水予報）.shp  市町村等（指定河川洪水予報）.shx  市町村等（気象警報等）.dbf  市町村等（気象警報等）.shp  市町村等（気象警報等）.shx  市町村等（火山関係）.dbf  市町村等（火山関係）.shp  市町村等（火山関係）.shx  府県予報区等.dbf  府県予報区等.shp  府県予報区等.shx  津波予報区.shp  (+7 more)
tools/: calc_shape_props.py  shape_to_geojson.py  visualize.py
tools/es/: make_shape_index.py  settings.py
visualized/: README.md
