[tool.poetry]
name = "jma-gis"
version = "0.1.0"
description = "気象庁の予報区等GISデータをもとに、ベクタータイルなどのデータを生成します。"
authors = ["Taku Fukada <naninunenor@gmail.com>"]
readme = "README.md"
packages = [{include = "jma_gis"}]

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^0.12.2"
shapely = "^2.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.11.4"
black = "^22.12.0"

[tool.poetry.group.optional.dependencies]
matplotlib = "^3.6.3"
elasticsearch = "^8.6.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
